--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5146,7 +5146,7 @@ ww1_romania.43.d:0 "Romanian society is, unfortunately, very polarized. The bigg
 ww1_romania.43.a:0 "There has to be a way!"
 ROM_the_party_of_thieves_desc:0 "The PNL governments of the past have been filled with corruption, corruption so deeply rooted everywhere in society that an investigation is needed. We must investigate several public institutions for PNL corruption, and shut them down."
 pot_tt:0 "When this focus is selected:\nGets event '§YShutting Down the Tramcar Society§!'\nWe will attempt to take down several pro §lPNL§! organizations, on charges of corruption. We should be prepared to face §Rsignificant§! opposition to these actions!"
-ROM_re_assure_liberals:0  "Reassure The Liberals"
+ROM_re_assure_liberals:0  "Reassure Our Coalition Partners"
 ROM_re_assure_liberals_desc:0 "Many liberals in Romania have been worried by the kings new government. They fear a reversion of Romanias democracy, and the king replacing said democracy with a dictatorship. These rumors are absolutely false. This government is not a thin veiled shadow for the king, and the king is still committed to Romanian democracy."
 ROM_restore_christianity_to_romania:0 "Restore Christianity to Romania"
 ROM_restore_christianity_to_romania_desc:0 ""
@@ -5161,6 +5161,7 @@ ww1_romania.18.f:0 "We need someone with a lot of intelligence, let's appoint Ar
 ROM_a_moral_romania:0 "Revive Trust in the Government"
 ROM_a_man_from_junimea:0 "A Man From Junimea"
 ROM_a_man_from_junimea_desc:0 ""
+ROM_disruptions_to_the_economy:0 "Disruptions to the Free Market"
 ROM_harmonization_of_romanian_society:0 "Harmonisation of Romanian Society"
 ROM_harmonization_of_romanian_society_desc:0 ""
 ROM_junimea_ideas:0 "Junimean Ideas"
@@ -5200,7 +5201,7 @@ ROM_the_workers_party_desc:0 "Let it be known! The strongest supporter of worker
 ROM_minimum_wage_law_idea:0 "Minimum Wage"
 ROM_reduced_working_week:0 "Reduced Working Week"
 ROM_liberal_government:0 "The government is lead by the §lPNL§!"
-ROM_economic_protectionalism:0 "Romania First!"
+ROM_economic_protectionalism:0 "Agrarian Protectionism "
 ROM_a_nation_of_peasants:0 "A Nation of Farmers"
 ROM_a_nation_of_peasants_desc:0 "The farmers of Romania are the backbone of the entire nation, the reason Romanians have food to eat. Being a part of such a crucial demographic, its key that we reward them. We shall pass new regulations on land lords, and give back some of the land they deserve to the them."
 ROM_economic_protectionalism_desc:0 "Romanias farmers and workers should come before all else. We need to raise tariffs on foreign goods to ensure our local producers can compete with foreign goods which have flooded our market as of late."
