--- a/localisation/english/ww1_raj_l_english.yml
+++ b/localisation/english/ww1_raj_l_english.yml
@@ -156,20 +156,12 @@
  RAJ_chettur_sankaran_nair:0 "Chettur Sankaran Nair"
  RAJ_viceroy_executive_council:0 "Viceroy's Executive Council"
  RAJ_harcourt_butler:0 "Harcourt Butler"
- RAJ_charles_stewart_wilson:0 "Charles Stewart-Wilson"
  RAJ_michael_o_dwyer:0 "Micheal O'Dwyer"
  RAJ_ludovic_porter:0 "Ludovic Porter"
- RAJ_charles_evelyn_arbuthnot_william_oldham:0 "Charles Evelyn Arbuthnot William Oldham"
  RAJ_robert_nathan:0 "Robert Nathan"
- RAJ_freeman_freeman_thomas:0 "Freeman Freeman-Thomas"
- RAJ_william_harrison_moreland:0 "William Harrison Moreland"
- RAJ_malcolm_lyall_darling:0 "Malcolm Lyall Darling"
- RAJ_john_maffey:0 "John Maffey"
- RAJ_charles_alexander_innes:0 "Charles Alexander Innes"
  RAJ_bryce_chudleigh_burt:0 "Bryce Chudleigh Burt"
  RAJ_richard_burn:0 "Richard Burn"
  RAJ_edward_charles_buck:0 "Edward Charles Buck"
- RAJ_wilhelm_schlich:0 "Wilhelm Schlich"
  RAJ_havelock_charles:0 "Havelock Charles"
 
  ##########
@@ -750,45 +742,30 @@ RAJ_saf_favored_saf:0 "Favoured South-Africa"
  # Industry Tree
 RAJ_tackle_stagflation:0 "Tackle Stagflation"
 RAJ_tackle_stagflation_desc:0 "Under our rule, the Indian economy is in a state of stagflation and further de-industrialisation, while the British economy has gone through its industrial revolution. Various economic policies implemented by our administration have furthered the severe decline of India's artisanal sectors of the economy. This led to India exporting much of its raw materials and being forced to import goods from Britain, resulting in crippling poverty and lack of domestic industry. In an effort to reverse these policies, we must restore Indian manufacturing and competitiveness on the global market."
-RAJ_tackle_stagflation_reward:0 "Modify '§YDe-Industrialisation§!' by\nMax Factories in a State:§G +5.00%§!\nFactory Output:§G +5.00%§!\n"
 
 RAJ_nullify_the_partition_of_bengal:0 "Nullify the Partition of Bengal"
 RAJ_nullify_the_partition_of_bengal_desc:0 "In 1905, Lord Curzon, then Viceroy of India, made the decision to partition the Bengal presidency into more provinces, along religious lines. Although the partition was ostensibly designed to facilitate the administration of the regions, it was met with considerable resistance from the Indian population, particularly the §YIndian National Congress§!. In order to demonstrate our good will and commitment to the development of Bengal, it is imperative that the nullification of the partition of the province be enacted."
-RAJ_nullify_the_partition_of_bengal_reward:0 "Modify '§YDe-Industrialisation§!' by\nConstruction Speed:§R -15.00%§!"
 
 RAJ_indian_iron_and_steel_company:0 "Bengal Iron and Steel Company"
 RAJ_indian_iron_and_steel_company_desc:0 ""
 
 RAJ_hardinge_bridge_railway:0 "Hardinge's Bridge Railway"
 RAJ_hardinge_bridge_railway_desc:0 "In 1889, the Eastern Bengal Railway proposed the construction of a railway bridge over the Padma River with the intention of facilitating communication between Calcutta and the, then, Eastern Bengal and Assam. In 1902, Sir FJE Spring prepared a report on the bridge. With the planning of such infrastructure now complete, it is now possible to direct resources towards the construction of the bridge."
-RAJ_hardinge_bridge_railway_reward:0 "Modify '§YDe-Industrialisation§!' by\nConstruction Speed:§G +10.00%§!"
 
 RAJ_form_bihar_and_horissa:0 "Form Bihar and Horissa"
 RAJ_form_bihar_and_horissa_desc:0 "With our latest investment in the Bengal presidency, we can now once again separate Bihar and Orissa provinces in an effort to facilitate the administration of these regions without facing a backlash from the Indian population."
-RAJ_form_bihar_and_horissa_reward:0 "Modify '§YDe-Industrialisation§!' by\nConstruction Speed:§G +20.00%§!"
 
 RAJ_dhamrai_hardinge_school:0 "Dhamrai Hardinge's School"
 RAJ_dhamrai_hardinge_school_desc:0 "Our recent successes in the Bengal region have allowed us to devote even more resources to the development of the region and its people. In an effort to educate the masses of Bengal, the opening of a government school is of paramount importance."
 RAJ_ramp_up_sugar_export:0 "Ramp-up Sugar Exports"
 RAJ_ramp_up_sugar_export_desc:0 "While other industries on the subcontinent have been struggling, sugar production, which is mostly exported to London, has been booming. Developing other agricultural sectors might benefit the local population, but it would be very costly with no real benefit to the Crown. We should capitalise even more on our sugar industry and reap the profits as soon as possible."
-RAJ_ramp_up_sugar_export_reward:0 "Modify '§YDe-Industrialisation§!' by\nMax Factories in a State:§G +15.00%§!\nStability:§R -5.00%§!"
-RAJ_generic_deindustrialisation_mes:0 "\n§RCompleting this focus will prevent us from removing the ''De-industrialisation'' National Spirit.§!"
+improve_research_speed_reward:0 "Modify '§YDe-Industrialisation§!' by:\nResearch Speed:§G +5.00%§!"
 
 RAJ_support_local_farmers:0 "Support Local Farmers"
 RAJ_support_local_farmers_desc:0 "The Raj has had its share of famines in its history. They are caused mainly by the general apathy of our administration towards the welfare of the Indian population. By supporting local farmers, we could effectively deal with poverty and alleviate much of the hardship faced by the Indian people, although it would require a much greater amount of resources to develop than other, more profitable crops."
-RAJ_support_local_farmers_reward:0 "Modify '§YDe-Industrialisation§!' by\nMax Factories in a State:§G +5.00%§!"
 
 RAJ_support_irrigation_projects:0 "Support Irrigation Projects"
 RAJ_support_irrigation_projects_desc:0 "The Raj currently has the largest irrigation system in the world, and by 1900 the amount of irrigated land had increased eightfold. Our work in creating more irrigable land has been fruitful and we must not backtrack now."
-RAJ_support_irrigation_projects_reward:0 "Modify '§YDe-Industrialisation§!' by\nMax Factories in a State:§G +10.00%§!"
-
-RAJ_import_british_textiles:0 "Import British Textiles"
-RAJ_import_british_textiles_desc:0 "Raw cotton is currently imported tariff-free from India to British factories. These factories then make textiles from Indian cotton and sell them back to the Indian market. While this arrangement has its drawbacks, it also allows the subcontinent to be of great interest to British investors. Reaching out to these lenders could very well allow a formidable industry to flourish in India."
-RAJ_import_british_textiles_reward:0 "Modify '§YDe-Industrialisation§!' by\nFactory Output:§G +10.00%§!\nStability:§R -5.00%§!"
-
-RAJ_restore_the_cotton_market:0 "Restore the Cotton Market"
-RAJ_restore_the_cotton_market_desc:0 "Raw cotton is currently imported tariff-free from India to British factories. These factories then make textiles from Indian cotton and sell them back to the Indian market. This deal has effectively killed the cotton industry in India and doesn't allow for the development of a large middle class in India. By redirecting funds to open brand new cotton mills, we could very well enable a large number of Indians to lift themselves out of poverty."
-RAJ_restore_the_cotton_market_mes:0 "\n§GCompleting this focus is necessary to remove the ''De-Industrialisation'' National Spirit.§!"
 
 RAJ_banaras_hindu_university:0 "Banaras Hindu University"
 RAJ_banaras_hindu_university_desc:0 "The Banaras Hindu University was founded by a number of Indian philanthropists, industrialists and nationalist sympathisers. While their aims often clashed with those of the Raj, the University has lifted thousands out of ignorance and allowed us to find more and more bright-minded individuals among the Indian masses."
@@ -806,7 +783,7 @@ RAJ_use_the_industrials_desc:0 "With the seed of the Industrial Revolution growi
 
 RAJ_ordnance_factory_board:0 "Ordnance Factory Board"
 RAJ_ordnance_factory_board_desc:0 "The history and development of the Indian Ordnance Factories is intricately linked to the Industrial Revolution in India. It was the East India Company that saw military hardware as a vital element in securing its economic interests in India and its political power, and in 1775, with the establishment of the Board of Ordnance at Fort William, the Ordnance Factory Board became a crucial component of military production in India."
-RAJ_ordnance_factory_board_reward:0 "Modify '§YDe-Industrialisation§!' by\nFactory Output:§G +5.00%§!"
+RAJ_ordnance_factory_board_reward:0 ""
 
 RAJ_invest_in_punjab:0 "Invest in Punjab"
 RAJ_invest_in_punjab_desc:0 "Located near the Northwestern province, Punjab is one of our most promising province. The land's irrigability was greatly improved by irrigation projects introduced in 1885, and now we only have to reap the benefits of such fertile land."
@@ -820,31 +797,41 @@ RAJ_invest_in_bombay_desc:0 "Located on the western side of the Indian Ocean, Bo
 RAJ_invest_in_calcutta:0 "Invest in Bengal"
 RAJ_invest_in_calcutta_desc:0 "First base of operation of the East India Company, Bengal is one of our most prosperous province. Since our establishment in the region, It has been home to many arsenals and mills of all kinds. Its capital, Calcutta, is also one of our busiest coastal ports."
 
-RAJ_military_developments:0 "Military Developments"
-RAJ_military_developments_desc:0 "Our recent investments in various parts of India have been fruitful in developing the civilian economies of these regions. We will build on these investments by setting up new arsenals in these areas."
-RAJ_military_developments_reward:0 "The benefits of this national focus will §Gincrease§! §Ywith each previous investment§!."
+RAJ_shift_to_military_production:0 "Shift to Military Production"
+RAJ_shift_to_military_production_desc:0 ""
 
-RAJ_privatise_andrew_yule_and_co:0 "Privatise Andrew Yule & Co."
-RAJ_privatise_andrew_yule_and_co_desc:0 "Andrew Yule & Co. was established in 1863 by Andrew Yule and has since grown to become a significant conglomerate with a diverse range of business interests. These include jute, cotton, coal, tea, engineering, electrical power, chemicals, insurance, railways, shipping, paper, and printing. In addition to these activities, the company also maintains a zamindari and oversees several companies in India. The privatisation of this enterprise would allow market attractiveness to be enhanced, thereby encouraging new investment."
-
-RAJ_nationalise_andrew_yule_and_co:0 "Nationalise Andrew Yule & Co."
-RAJ_nationalise_andrew_yule_and_co_desc:0 "Andrew Yule & Co. was established in 1863 by Andrew Yule and has since grown to become a significant conglomerate with a diverse range of business interests. These include jute, cotton, coal, tea, engineering, electrical power, chemicals, insurance, railways, shipping, paper, and printing. In addition to these activities, the company also maintains a zamindari and oversees several companies in India. The nationalisation of this enterprise would allow the company to be overseen by our government, thereby enabling the optimal allocation of resources to meet the country's most pressing needs."
+RAJ_shift_to_industrial_production:0 "Shift to Industrial Production"
+RAJ_shift_to_industrial_production_desc:0 ""
 
 RAJ_imperial_bank_of_india:0 "Imperial Bank of India"
 RAJ_imperial_bank_of_india_desc:0 ""
+
 RAJ_india_ordnance_factories:0 "India Ordnance Factories"
 RAJ_india_ordnance_factories_desc:0 ""
+RAJ_military_developments_reward:0 "The benefits of this national focus will §Gincrease§! §Ywith each previous investment§!."
+
 RAJ_refurbish_kirkee_arsenal:0 "Refurbish Kirkee Arsenal"
 RAJ_refurbish_kirkee_arsenal_desc:0 ""
+
 RAJ_tata_steel_ltd:0 "Tata Steel Ltd."
 RAJ_tata_steel_ltd_desc:0 ""
+
 RAJ_burmah_oil:0 "Burmah Oil"
 RAJ_burmah_oil_desc:0 ""
+
+RAJ_focus_on_raw_materials_exports:0 "Focus on Raw Materials Exports"
+RAJ_focus_on_raw_materials_exports_desc:0 ""
+
+RAJ_domestic_industry:0 "Domestic Industry"
+RAJ_domestic_industry_desc:0 ""
+
+RAJ_increase_provincial_taxes:0 "Increase Provincial Taxes"
+RAJ_increase_provincial_taxes_desc:0 ""
 
 # Army Tree
 RAJ_indian_army_act:0 "Indian Army Act"
 RAJ_indian_army_act_desc:0 ""
-RAJ_indian_army_act_reward:0 "Modify '§YIndian Army§!' by:\nDivision Attack:§G +5.00%§!\nDivision Defense:§G +5.00%§!\nDivision Attrition:§G -5.00%§!\nDivision Organization:§G +5.00%§!"
+RAJ_indian_army_act_reward:0 ""
 
 RAJ_defence_of_the_northwest_frontier:0 "Defence of the Northwest Frontier"
 RAJ_defence_of_the_northwest_frontier_desc:0 ""
@@ -920,7 +907,7 @@ RAJ_integrate_burma_desc:0 ""
 
 RAJ_empower_the_ghq:0 "Empower the GHQ"
 RAJ_empower_the_ghq_desc:0 ""
-RAJ_empower_the_ghq_reward:0 "Modify '§YIndian Army§!' by:\nDivision Organization:§G +10.00%§!"
+RAJ_empower_the_ghq_reward:0 ""
 
 RAJ_diversified_equipments:0 "Diversified Equipments"
 RAJ_diversified_equipments_desc:0 ""
@@ -932,15 +919,15 @@ RAJ_adopt_british_models_reward:0 "Modify '§YIndian Army§!' by:\nLicense purch
 
 RAJ_indian_staff_college:0 "Indian Staff College"
 RAJ_indian_staff_college_desc:0 ""
-RAJ_indian_staff_college_reward:0 "Modify '§YIndian Army§!' by:\nTraining time:§G -10.00%§!\nPlanning Speed:§G +5.00%§!"
+RAJ_indian_staff_college_reward:0 ""
 
 RAJ_deal_with_the_officers_shortage:0 "Deal with the Officer Shortage"
 RAJ_deal_with_the_officers_shortage_desc:0 ""
-RAJ_deal_with_the_officers_shortage_reward:0 "Modify '§YIndian Army§!' by:\nReinforce Rate:§G +10.00%§!\nPlanning Speed:§G +5.00%§!"
+RAJ_deal_with_the_officers_shortage_reward:0 ""
 
 RAJ_reorganise_the_chain_of_command:0 "Reorganise the Chain of Command"
 RAJ_reorganise_the_chain_of_command_desc:0 ""
-RAJ_reorganise_the_chain_of_command_reward:0 "Modify '§YIndian Army§!' by:\nDaily Command Power Gain Multiplier:§G +25.00%§!\nDivision Attack:§G +5.00%§!\nDivision Defense:§G +5.00%§!"
+RAJ_reorganise_the_chain_of_command_reward:0 ""
 
 RAJ_indian_medical_degrees_act:0 "Indian Medical Degrees Act"
 RAJ_indian_medical_degrees_act_desc:0 ""
@@ -948,11 +935,11 @@ RAJ_indian_medical_degrees_act_reward:0 ""
 
 RAJ_adapt_our_supportives_services:0 "Adapt our Supportives Services"
 RAJ_adapt_our_supportives_services_desc:0 ""
-RAJ_adapt_our_supportives_services_reward:0 "Modify '§YIndian Army§!' by:\nDivision Attrition:§G -25.00%§!\nDivision speed:§G +10.00%§!\nReinforce Rate:§G +5.00%§!"
+RAJ_adapt_our_supportives_services_reward:0 ""
 
 RAJ_war_of_opportunity:0 "War of Opportunity"
 RAJ_war_of_opportunity_desc:0 ""
-RAJ_war_of_opportunity_reward:0 "Modify '§YIndian Army§!' by:\nCommander as Advisor Cost:§G +50.00%§!"
+RAJ_war_of_opportunity_reward:0 ""
 
 # Third Anglo-Afghan War
 RAJ_third_anglo_afghan_war:0 "Third Anglo-Afghan War"
