start of demsoc tree

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5208,6 +5208,8 @@ ROM_economic_protectionalism_desc:0 "Romanias farmers and workers should come be
 ROM_undemocratic_methods:0 "Undemocratic Methods for a Democratic Policy"
 ROM_undemocratic_methods_desc:0 "The PNL is a somewhat divided party, with factions who support and oppose different levels of liberal reform. We really cannot waste our time and political capital on getting everyone onboard with the plan, and thus we must make use of loopholes to pass some of our agenda. The ends will justify the means in this case."
 ROM_further_land_reform_desc:0 "The Romanian people expect further land reform from us. We must deliver, and thus will reach out to all sides of the political isle to come up with a moderate bill everyone can agree upon."
+ROM_influx_of_western_intellectuals_idea2:0 "Influx of Western Socialists"
+ROM_towards_a_socialist_economy:0 "Transitioning Economy"
 ROM_sa_faci_din_rahat_bici:0 "Sa Faci Din Rahat Bici"
 ROM_sa_faci_din_rahat_bici_desc:0 "We don't have the steel of Germany or the vast population of Russia, but our economy still has the foundations for modernization. Welcoming the advice of industrial experts from foreign countries will help us speed up the growth of our small, but important industrial sector."
 ROM_fixing_the_railways:0 "Fixing the Railways"
