Some African leaders, flags and names

--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1946,3 +1946,16 @@
  SMR_communism_party_long:0 "Partito Socialista Sammarinese"
  
  AFA_neutrality_party:0 "Modaytó Dynasty"
+
+ COG_fascism_party:0 "Kimbanguism"
+ COG_democratic_party:0 "PAC"
+ COG_democratic_party_long:0 "Pan-African Congress"
+
+ SEN_fascism_party:0 "Senegalese Mercenaries"
+ SEN_fascism_party_long:0 "Mercenary Senegalese Army"
+ SEN_neutrality_party:0 "Muridiyya"
+ SEN_communism_party:0 "Ligue de défense"
+ SEN_communism_party_long:0 "Ligue universelle de défense de la race noire"
+
+ MLW_neutrality_party:0 "Chilembwe Movement"
+
