--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -295,7 +295,7 @@
  STATE_294: "Muscat"
  STATE_295: "Leopoldville"
  STATE_296: "Portuguese Guinea"
- STATE_297: "Equatorial Guinea"
+ STATE_297: "Spanish Guinea"
  STATE_298: "Liberian Coast"
  STATE_299: "Falkland Islands"
  STATE_300: "Uruguay"
