--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -4019,3 +4019,15 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  #Aussa
  AFA_yayyo_mohamed:0 "Yayyo Macammad"
  AFA_mohamed_yayyo:0 "Macammad Yayyo"
+
+ COG_paul_panda_farnana:0 "Paul Panda Farnana"
+ COG_simon_kimbangu:0 "Simon Kimbangu"
+
+ EQG_santiago_uganda:0 "Santiago Uganda"
+
+ SEN_blaise_diagne:0 "Blaise Diagne"
+ SEN_ahmadu_bamba_mbacke:0 "Ahmadu Bamba Mbacke"
+ SEN_abdul_injai:0 "Abdul Injai"
+ SEN_lamine_senghor:0 "Lamine Senghor"
+
+ MLW_john_chilembwe:0 "John Chilembwe"
