General KIA generic event

--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -470,6 +470,7 @@
  BUL_dmitry_dobrev:0 "Dmitry Dobrev"
  BUL_rashko_serafimov:0 "Rashko Serafimov"
  BUL_radul_milkov:0 "Radul Milkov"
+ BUL_panteley_kiselov:0 "Panteley Kiselov"
 
  # BURMA
  BRM_thibaw:0 "Thibaw"
