--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -100,7 +100,7 @@
  VICTORY_POINTS_9621: "Subotica"
  VICTORY_POINTS_6700: "Szeged"
  VICTORY_POINTS_3696: "Oradea"
- VICTORY_POINTS_84: "Târgu Mureș"
+ VICTORY_POINTS_84: "Târgu Mureş"
  VICTORY_POINTS_6679: "Sibiu"
  VICTORY_POINTS_11691: "Užhorod"
  VICTORY_POINTS_6761: "Suczawa"
