--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -3359,11 +3359,11 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  SER_aleksandar_karadjordjevic:0 "Aleksandar Karađorđević"
  SER_stevan_hadzic:0 "Stevan Hadžić"
  SER_petar_bojovic:0 "Petar Bojović"
- SER_zivko_pavlovic:0 "Zivko Pavlović"
- SER_jovan_jovanovic_pizon:0 "Jovan Jovanovic-Pizon"
+ SER_zivko_pavlovic:0 "Živko Pavlović"
+ SER_jovan_jovanovic_pizon:0 "Jovan Jovanović-Pižon"
  SER_mihailo_gavrilovic:0 "Mihailo Gavrilović"
  SER_stojan_protic:0 "Stojan Protić"
- SER_momcilo_nincic:0 "Momcilo Ninčić"
+ SER_momcilo_nincic:0 "Momčilo Ninčić"
  SER_andra_nikolic:0 "Andra Nikolić"
  SER_milovan_milovanovic:0 "Milovan Milovanović"
  SER_milovan_milovanovic_desc:0 "A young, ambitious politician in People's Radical Party, otherwise filled up with old and experienced people, Milovan Milovanović certainly stands out of the mainstream of the party. His political career was mostly centered around Ministry of Foreign Affairs. He joined the party not long after it's emergence, forgoing the family political tradition of supporting Progressive party. His career started with him being a rare academically successful politician, especially considering that he ran for doctorate as well. His academic qualifications helped him advance through the party ranks, especially considering that average member was barely literate. \n\nHis career in the government started not long after the May Coup, with him being appointed as Minister of Foreign Affairs in some of the subsequent governments. Him being rather successful, overshadowing failures of the Annexation crisis, brought up his popularity, and he was seen as a potential successor to Nikola Pašić, and even as his rival. Milija, as his friends call him, now finds himself in a position he yearned for so long, position of President of the Ministries, and is now on crossroads. His premiership he already plans to focus on the diplomatic overtures to Bulgaria and friendly powers, in an attempt to create a single Balkan alliance of all Balkan states, to oppose their common foes, Austria-Hungary, but most importantly, the one that separates them all, Ottoman Empire."
@@ -3377,7 +3377,6 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  SER_lazar_pacu:0 "Lazar Paču"
  SER_kosta_stojanovic:0 "Kosta Stojanović"
  SER_milorad_draskovic:0 "Milorad Drašković"
- SER_mihailo_ilic:0 "Mihailo Ilic"
  SER_kosta_timotijevic:0 "Kosta Timotijević"
  SER_milorad_vujicic:0 "Milorad Vujicic"
  SER_dorde_gencic:0 "Đorđe Genčić"
@@ -3400,6 +3399,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  SER_stojan_ribarac:0 "Stojan Ribarac"
  SER_bozidar_terzic:0 "Božidar Terzić"
  SER_marko_djuricic:0 "Marko Đuričić"
+ SER_sava_grujic:0 "Sava Grujić"
  SER_svetozar_borojevic:0 "Svetozar Boroević"
 
  #Macedonia
