--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -11417,6 +11417,9 @@ FRA_leave_MOR: "Leave Morocco"
  ww1_serbia.60.t: "VMORO Uprising Crushed"
  ww1_serbia.60.d: "With the onslaught of our forces, the remaining rebels have either surrendered or fled to their respective countries. This was a close victory, and the uprising only proved to military that their hold over southern territories is justified. We will have harder time replacing the military administration with civilian one after this. \nWith evacuation of the Bulgarian and Albanian insurgents, the local population had followed too. While it may seem like a good thing, our relations with Bulgaria and Vlore government will definetly become worse from this."
  ww1_serbia.60.a: "Something tells me this isn't the last we will see from VMORO..."
+ ww1_serbia.61.t:0 "Sava Grujić Dies"
+ ww1_serbia.61.d:0 "General Sava Grujić, first Radical Prime Minister, has died in Beograd. He was a revolutionary, a successful general in Wars of 1876-78, successful diplomat and statesman. \nHis career started as ordinary soldier, and then he worked his way up to the rank of general. Politically, he was influenced by the early socialist ideas of Svetozar Marković and became one of the founding fathers of the People's Radical Party in 1881, and thusfar earning a Prime Minister spot five non-consecutive times, using his position in fighting the autocratic regimes of Obrenović kings."
+ ww1_serbia.61.a:0 "May he rest in peace"
  ww1_serbia.100.t: "Black Hand"
  ww1_serbia.100.d: "Rumors have been raised among the territorial surveillance agents. An organization named Black Hand would gain influence in the country. This group would be armed and would have participated in the seizure of power by Petar I by killing the previous family in 1903. Although they are only a marginal force, they seem to be taking shape."
  ww1_serbia.100.a: "Worrying..."
