--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -15177,7 +15177,7 @@ ww1_morocco.26.f: "We should leave before we embarrass ourselves further..."
  ww1_BUL_TUR.26.a: "Address the Border Refugee Problem"
  ww1_BUL_TUR.26.b: "Discuss Border Banditry"
  ww1_BUL_TUR.26.c: "Raise Concerns About 'Ottomanization'"
- ww1_BUL_TUR.26.d: "Push for a Macedonian Autonomous State"
+ ww1_BUL_TUR.26.dd: "Push for a Macedonian Autonomous State"
  ww1_BUL_TUR.26.e: "Cease Negotiations"
  ww1_BUL_TUR.26.f: "We’ve Made All Our Points"
 
