--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -8727,6 +8727,15 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_bulgaria.64.b: "Let them come!"
  ww1_bulgaria.64.a: "Peace upon death."
 
+ww1_bulgaria.66.t: "Achievement of Stan Stefano"
+ww1_bulgaria.66.d: "Through hard work and perseverance, we have regained control over the territories that once belonged to the Bulgarian state. This is a significant milestone in our history."
+ww1_bulgaria.66.a: "Awesome!"
+
+ww1_bulgaria.67.t: "Tobacco Surplus"
+ww1_bulgaria.67.d: "Our bountiful tobacco harvest has led to a surplus, providing a boost to our economy and the well-being of our citizens."
+ww1_bulgaria.67.a: "One of the many benefits of smoking!"
+
+
  # ENGLAND
  ww1_england.1.t: "Sinking of the Titanic"
  ww1_england.1.d: "The RMS Titanic, which was considered unsinkable, has met its end in one of the largest maritime disasters in history, with over 1500 dead. In local coffee houses, up to parliaments throughout Europe and North America, there is already a debate about why the ship wasn't properly equipped with enough life rafts, why the comm system was disabled, and why exactly the ship crashed into an iceberg.\n\nThis tragedy has attracted international attention and spurred a massive overhaul in maritime safety standards."
