romania loc+focus icons
romania loc+focus icons

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5133,7 +5133,7 @@ ROM_advancements_in_plane_technology:0 "Advancements in Plane Technology"
 ROM_sec:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!"
 ROM_the_southern_wall:0 "The Southern Wall"
 ROM_stragetic_fortifications_on_the_southern_border:0 "Fortify Key Cities on the Bulgarian Border"
-ROM_complete_the_defense_of_the_southern_carpathians:0 "Complete the Defense of the Southern Carpathians"
+ROM_complete_the_defense_of_the_southern_carpathians:0 "Increase Defenses in the Southern Carpathians"
 ROM_strike_swift_and_hard:0 "The 'Z' Hypothesis"
 ROM_sway_the_vote_of_soldiers:0 "Sway the Vote of Soldiers"
 ROM_invite_fredrick_wilhelm_as_king:0 "Invite Friedrich Wilhelm as King"
@@ -5313,7 +5313,7 @@ ROM_romania_for_those_who_earn_it:0 "Romania For Those Who Earn It"
 ROM_those_who_are_often_forgotten:0 "Those Who Are Often Forgotten"
  ROM_cut_government_bloat:0 "Cut Government Bloat"
 right_wing_populist:0 "Right Wing Populist"
-ROM_the_crowned_jewl:0 "The Crowned Jewl"
+ROM_the_crowned_jewl:0 "The Crowned Jewel"
 alexandru_c_cuza:0 "Alexandru Cuza"
 disable_halve_parliment:0 "§RDIsables§! National Focus: '§YHalve Parliaments Seats§!'"
 ROM_no_take_halve:0 "Has promised King that we won't pursue this policy"
@@ -5522,6 +5522,34 @@ house_win.tt:0 "The King will change course, fully endorsing our government and 
 ROM_consolidate_the_dictatorship:0 "Take the Mask Off"
 ROM_guide_parliament:0 "Intra-Party Democracy"
 ROM_homefront:0 "Homefront"
+
+ROM_secure_the_peasants:0 "Secure the Peasants"
+ROM_secure_the_party:0 "Secure the Party"
+ROM_secure_the_elites:0 "Secure the Elites"
+ROM_industrial_modernization:0 "Industrial Modernization"
+ROM_voice_of_the_farmer:0 "The Voice of the Farmer"
+ROM_just_to_bide_time:0 "Just To Bide Time"
+ROM_friends_from_junimea:0 "Friends from Junimea"
+ROM_abandon_federalism:0 "Abandon Federalism"
+ROM_jewish_emancipation:0 "Exodus to Romania" #stretch? can change
+ROM_the_propaganda_machine:0 "The Propaganda Machine"
+ROM_the_natural_enemy:0 "The Natural Enemy"
+ROM_the_natural_enemy_desc:0 "For too long, the Russian Bear has loomed over our nation, disrupting our aspirations and threatening our sovereignty. Their interference in our affairs and disregard for Romanian borders has made them our natural enemy. It is time to settle the score and head to war. The Tsar\’s grip must be broken, and the Russian menace must be confronted head-on."
+ROM_encourage_development_of_the_left_flank:0 "Encourage Socialist Help in Development"
+ROM_a_country_to_fight_for:0 "A Country to Fight For"
+ROM_new_constitution:0 "A New Constitution"
+ROM_cooperative_agriculture:0 "Cooperative Agriculture"
+ROM_nationalize_steel_industry:0 "Nationalize the Steel Industry"
+ROM_poporanist:0 "Poporanism"
+ROM_expansion_of_the_middle_class:0 "Expand the Middle Class"
+ROM_lessons_from_denmark:0 "Lessons From Denmark"
+ROM_peasants_democracy:0 "Peasants' Democracy"
+ROM_encourage_jobs_in_the_war_industry:0 "Hire in the War Industry"
+ROM_de_polarization:0 "Depolarization"
+ROM_transition_towards_a_socialist_economy:0 "Transition to a Socialist Economy"
+ROM_alliance_with_the_pdsr:0 "Ally with the PDSR"
+ROM_invite_french_socialists:0 "Invite French Socialists"
+
 #custom tooltips
 ROM_the_kings_government:0 "The King's Favorites"
 ROM_the_kings_government_desc:0 "The failure of PC and PNL to govern the country in recent years has forced our hand. With the current government dismissed, we shall task the moderates of the PCD to form a new government. This sensible coalition should hopefully govern the country carefully in the coming times."
