--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -7797,7 +7797,7 @@ ROM_pander_to_the_middle_class:0 "Pander to the Middle Class"
 ROM_embrace_modernization:0 "Embrace Modernization"
  FRA_ww1_support_napoleon_V:0 "Bonapartist Tide"
  FRA_ww1_support_napoleon_V_desc:0 "France experienced its greatest hour of glory during the reign of Emperor Napoleon I. This era took us to Germany, Italy and even Russia. We must find this kind of strong leader by supporting the Bonaparte house."
-ROM_do_later:0 "On This Mic I Will Humble Him"
+ROM_do_later:0 "Bring in Old Guard"
  FRA_law_of_exile_retired:0 "Repeal the Law of Exile"
  FRA_law_of_exile_retired_desc:0 "§LThe Law of Exile prevents foreign monarchs from returning to France. This is a law that seeks to only ruin France and deprive the nation of its former glory. This cannot do and the law must be revoked in its entirety.\n\nThis will enable the houses of §YBonaparte§!, §YBourbon§! and §YOrléans§! to return to the French territory and participate to politics.§!"
 
@@ -7806,7 +7806,9 @@ ROM_do_later:0 "On This Mic I Will Humble Him"
 
  FRA_ww1_doctrine_effort:0 "Doctrines Effort"
  FRA_ww1_doctrine_effort_desc:0 "We must concentrate our efforts on preparing new battle plans integrating our submarines and our latest models of battleships."
-
+ww1_romania.60.t:0 "The Peace Prime Minister"
+ww1_romania.60.d:0 "To make clear concessions to Germany, the King has made the decision to fire the current Prime Minister in exchange for someone Germany favors more. This should help give us secure better terms for peace"
+ww1_romania.60.a:0 "Let's hope he can!"
  FRA_ww1_prepare_dardanelles_front:0 "Prepare Dardanelles Front"
  FRA_ww1_prepare_dardanelles_front_desc:0 "The Dardanelles constitute a strategic position connecting the Mediterranean and the Black Sea. Taking control of this region would give us access to the Bosphorus, then access to the Crimea. Unfortunately, the position is held by the [347.OWNER.GetAdjective]s. To force passage, we must train troops capable of landing in enemy territory."
 
