--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2835,7 +2835,6 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  ROM_german_industrial_aid_instant_desc:0 "§RThis idea will be removed if we go to war with Germany§!"
  ROM_french_industrial_aid:0 "French Industrial Aid"
  ROM_french_industrial_aid_instant_desc:0 "§RThis idea will be removed if we go to war with France§!"
- 
  ROM_caile_ferate_romane:0 "Căile Ferate Române"
  ROM_atelierele_CFR_works:0 "Atelierele C.F.R. Works"
  ROM_atelierele_CFR_grivita:0 "Atelierele C.F.R. Griviţa"
@@ -2848,7 +2847,8 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  ROM_santierul_naval_constanta:0 "Şantierul Naval Constanţa"
  ROM_santierul_naval_galati:0 "Şantierul Naval Galaţi"
  ROM_santierul_naval_giurgiu:0 "Şantierul Naval Giurgiu"
- 
+ ROM_full_male_suffrage:0 "Full Male Suffrage"
+
  #PERU
  PRU_aristocratic_republic:0 "Aristocratic Republic"
  PRU_aristocratic_republic_desc:0 "Most of the presidents that ruled the country were from the social elite."
