--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1874,6 +1874,21 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  BUL_idea_orange_guard:0 "Orange Guard"
  BUL_idea_stabilized_economy:0 "Stabilized Economy"
  BUL_idea_land_reforms:0 "Land Reforms"
+ BUL_dreams_of_a_stan_stefano:0 "Dreams of a Stan Stefano"
+ BUL_exarchate_1:0 "Bulgarian Exarchate"
+ BUL_funding_the_bdz:0 "Funding the BDZ"
+ BUL_imro:0 "IMRO"
+ BUL_sell_food_surplus:0 "Profits of Food Surplus"
+ BUL_road_projects:0 "Paving New Roads"
+ BUL_arms_factory_construction_priority:0 "Arms Factory Priority"
+ BUL_greek_bulgarian_defense_pact:0 "Greeco-Bulgarian Defense Pact"
+ BUL_calendar_change:0 "Calendar Change"
+ BUL_force_the_farmers_into_factories:0 "Forcing Farmers into Factories"
+ BUL_TUR_border_chaos:0 "Border Chaos"
+ BUL_mediterranean_oportunity:0 "Mediterranean Oportunity"
+ BUL_greek_opposition:0 "Greek Opposition"
+ BUL_tobacco_surplus:0 "Tobacco Sales"
+ BUL_turkish_opposition:0 "Turkish Opposition"
   
  #AUSTRALIA - NS - Gov
  AST_idea_Citizen_Army:0 "Citizen Military Forces"
