--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5423,7 +5423,7 @@ ROM_for_the_truth:0 "For Romania! For the Truth!"
 ROM_for_the_truth_desc:0 "The war with Austria is a war of liberation for the oppressed Romanians in Hungary. We must strengthen our troops resolve and reach out to Romanians in Austria Hungary who are currently being oppressed, and get them to fight on the side of truth and liberation!"
 ROM_lessons_from_carpathian_defense:0 "Against All Odds!"
 ROM_lessons_from_carpathian_defense_desc:0 ""
-ROM_the_great_war_redux:0 "The Great War Redux"
+ROM_the_great_war_redux:0 "The War to End All Wars"
 ROM_the_great_war_redux_desc:0 "Once again, France and Germany are engaging in all out war. While the last war between the great powers was contained amongst themselves, this time they're joined by half of the world. With our key position in Europe, its unlikely we can avoid being involved, thus we must consider our options. While the Entente would probably promise the largest land gain, is our army really ready to face Austria? We'd likely have an easier time with the Central Powers, but is it worth abandoning our ambitions on Transylvania for the near future? "
 ROM_our_call_to_arms:0 "Our Call to Arms"
 ROM_our_call_to_arms_desc:0 ""
