--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2816,7 +2816,7 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  ROM_research_investments:0 "Research Investments"
  ROM_blue_law_overturned:0 "Overturned Blue Law"
  ROM_welcome_anglo_italian_banks_idea:0 "Anglo-Italian Banks"
- ROM_welcome_anglo_italian_banks_idea_instant_desc:0 "§RThis idea will be removed if we go to war with United Kingdom§!"
+ ROM_welcome_anglo_italian_banks_idea_instant_desc:0 "§RThis idea will be removed if we go to war with United Kingdom or Italy! §R§W"
  ROM_influx_of_western_intellectuals_idea:0 "Influx of Western Intellectuals"
  ROM_aristocratic_romania_idea:0 "An Aristocratic Romania"
  ROM_carol_i_idea:0 "The King's Opinion"
