social welfare idea
for leaf

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5552,6 +5552,7 @@ ROM_invite_french_socialists:0 "Invite French Socialists"
 ROM_restructure_our_logistics:0 "Improve Supply Logistics"
 ROM_restructure_our_logistics_desc:0 "With Romania’s needs of armed forces expanding, it has become evident that our current logistics network is insufficient. By modernizing our supply routes and infrastructure, we can ensure that vital resources reach the front lines more efficiently, strengthening our strategic capabilities and preparing our nation for future challenges."
 ROM_slow_and_steady_wins_the_race:0 "Slow and Steady Wins the Race"
+ROM_social_welfare:0 "Social Welfare"
 
 
 #custom tooltips
