--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2848,6 +2848,8 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  ROM_santierul_naval_galati:0 "Şantierul Naval Galaţi"
  ROM_santierul_naval_giurgiu:0 "Şantierul Naval Giurgiu"
  ROM_full_male_suffrage:0 "Full Male Suffrage"
+ ROM_the_natural_enemy_idea:0 "The Natural Enemy"
+ ROM_social_welfare_idea:0 "State-Funded Social Welfare"
 
  #PERU
  PRU_aristocratic_republic:0 "Aristocratic Republic"
