--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -467,3 +467,4 @@ member_of_PC:0 "Member of §cPC§!"
 member_of_PNL:0 "Member of §lPNL§!"
 member_of_PSDR:0 "Member of §rPSDR§!"
 member_of_PND:0 "member of §qPND§!"
+democratic_coalition:0 "Democratic Coalition"
