--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1874,10 +1874,13 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  BUL_idea_orange_guard:0 "Orange Guard"
  BUL_idea_stabilized_economy:0 "Stabilized Economy"
  BUL_idea_land_reforms:0 "Land Reforms"
- BUL_dreams_of_a_stan_stefano:0 "Dreams of a Stan Stefano"
+ BUL_dreams_of_stan_stefano:0 "Dreams of Stan Stefano"
+ BUL_dreams_of_stan_stefano_desc:0 "Ever since the Berlin Conference of 1878, where a large expansion of our land was dangled in front of our face just to be taken back, we have longed to craft the 'Stan Stefano' borders we so desire and deserve and to liberate the Balkans from the Turks who've long oppressed and occupied the Balkans."
  BUL_exarchate_1:0 "Bulgarian Exarchate"
+ BUL_exarchate_1_desc:0 "The Bulgarian Exarchate was concieved out of Bulgarian nationalism and subjugation from the Greek Ecuminical Patriarche of Constantinople during the time of 'Bulgarian revitalization'. In 1872, Sultan Abdulaziz was unilaterally decreed without the blessing of the Patriarche of Constantinople, making our Exarchate de facto an autocephally. Wonderful leaders in our religious community, such as Yosuf I, have worked valiently to legitimize our church and to expand it in the fields of theology, education, and the sciences."
  BUL_funding_the_bdz:0 "Funding the BDZ"
  BUL_imro:0 "IMRO"
+ BUL_imro_desc:0 "The IMRO is an organization fighting within Macedonia to achieve autonomy, independence, or unification with our Tsardom, who've been wrongfully accused of terrorism by Constantinople. We could utilize the IMRO and their sister organizations such as ITRO (international Thracian revolutionary organization) and other Komitadji's."
  BUL_sell_food_surplus:0 "Profits of Food Surplus"
  BUL_road_projects:0 "Paving New Roads"
  BUL_arms_factory_construction_priority:0 "Arms Factory Priority"
@@ -1889,6 +1892,7 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  BUL_greek_opposition:0 "Greek Opposition"
  BUL_tobacco_surplus:0 "Tobacco Sales"
  BUL_turkish_opposition:0 "Turkish Opposition"
+ BUL_ruse_blood_wedding_ordeal_desc:0 "On 24 February 1910, Yordan Stefanov and Saafet obtained permission to marry from a doctor, as Saafet was "mentally healthy" and claimed to be 18 years old. Saafet decided to adopt a Slavic name — Ruska. On the next day, her father, who was a hodzha, expressed his protest before the mayor, along with other Muslims. According to him and his wife, their daughter was abducted and still was underage (almost 16 years old) for a marriage. The court revoked the marriage permission on 27 February 1910, and ordered that the girl be returned to her parents, so she returned to their house until the evening. At night, a crowd of "adventurers" gathered in front of Saafet's house with the intention to "steal" her and set her free. The authorities responded by moving the girl to a police station, but could not cope with the approximately 1000 people, and Saafet eventually married Yordan on the 28th. Their wedding was celebrated by many on the central square, as this was the first Sunday before Lent, and a traditional fancy-dress carnival was held. The local police officer, who also attended the carnival, was mocked for not being able to keep Saafet in the police station. Half an hour later, he called up support from the cavalry, and after some mutual verbal insults, the citizens and the military started a fight. There were 24 dead and about 70 injured after the clashes. At first, the police attempted to cover up the story by restricting communications to and from Ruse, but it soon became the top news in newspapers all over the country."
   
  #AUSTRALIA - NS - Gov
  AST_idea_Citizen_Army:0 "Citizen Military Forces"
