--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -8729,6 +8729,22 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_bulgaria.64.d: "Bulgaria demanded the cession of the territories stipulated in the Treaty of San Stefano and the demilitarisation of all of Ottoman Europe, including Kostantiniyye. These demands were tantamount to a declaration of war."
  ww1_bulgaria.64.b: "Let them come!"
  ww1_bulgaria.64.a: "Peace upon death."
+ 
+ ww1_bulgaria.65.t: "Easter Festive Spirit with Greece"
+ww1_bulgaria.65.d: "With the Easter festivities approaching, there is an opportunity to foster a more amicable relationship with our Greek neighbors. Though tensions may exist, a mutual respect during such times could benefit both nations."
+ww1_bulgaria.65.a: "Ooh, very nice"
+
+ww1_bulgaria.66.t: "Achievement of San Stefano"
+ww1_bulgaria.66.d: "After much struggle, we have finally reached the long-awaited vision of a Greater Bulgaria. The territory outlined in the Treaty of San Stefano is now under our control. This is a momentous achievement for the Bulgarian people."
+ww1_bulgaria.66.a: "Awesome!"
+
+ww1_bulgaria.67.t: "Tobacco Surplus"
+ww1_bulgaria.67.d: "Bulgaria's rich lands have provided an unexpected bounty: a surplus of tobacco. This surplus offers an economic boost to the nation, a reminder of the prosperity that can be gained from our resources."
+ww1_bulgaria.67.a: "One of the many benefits of smoking!"
+
+ww1_bulgaria.68.t: "Amending the Silver Constitution"
+ww1_bulgaria.68.d: "A movement has emerged to amend the Silver Constitution, shifting more power to the Tsar. While some may oppose these changes, others see it as a necessary step to ensure a stronger, more centralized Bulgaria."
+ww1_bulgaria.68.a: "Empower the Tsar!"
 
  # ENGLAND
  ww1_england.1.t: "Sinking of the Titanic"
