--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -8735,6 +8735,10 @@ ww1_bulgaria.67.t: "Tobacco Surplus"
 ww1_bulgaria.67.d: "Our bountiful tobacco harvest has led to a surplus, providing a boost to our economy and the well-being of our citizens."
 ww1_bulgaria.67.a: "One of the many benefits of smoking!"
 
+ww1_bulgaria.68.t: "Amending the Silver Constitution"
+ww1_bulgaria.68.d: "fill later"
+ww1_bulgaria.68.a: "Empower the Tsar!"
+
 
  # ENGLAND
  ww1_england.1.t: "Sinking of the Titanic"
