--- a/localisation/russian/countries_l_russian.yml
+++ b/localisation/russian/countries_l_russian.yml
@@ -1668,19 +1668,13 @@
  ZAM_ADJ:0 "Замбийск"
  MLW_fascism:1 "Империя Малави"
  MLW_fascism_DEF:1 "Империя Малави"
- MLW_democratic:1 "Республика Малави"
- MLW_democratic_DEF:1 "Республика Малави"
- MLW_neutrality:0 "Малави"
- MLW_neutrality_DEF:0 "Малави"
- MLW_communism:1 "Коммунистическая Малави"
- MLW_communism_DEF:1 "Коммунистическая Малави"
+ MLW_democratic_DEF:1 "Республика Ньясаленд"
+ MLW_communism:1 "Социалистический Ньясаленд"
+ MLW_communism_DEF:1 "Социалистический Ньясаленд"
  MLW_fascism_ADJ:0 "Малавийск"
- MLW_democratic_ADJ:0 "Малавийск"
- MLW_neutrality_ADJ:0 "Малавийск"
- MLW_communism_ADJ:0 "Малавийск"
- MLW:0 "Малави"
- MLW_DEF:0 "Малави"
- MLW_ADJ:0 "Малавийск"
+ MLW:0 "Ньясаленд"
+ MLW_DEF:0 "Ньясаленд"
+ MLW_ADJ:0 "Ньясалендск"
  GAB_fascism:1 "Суверенное Габонское Государство"
  GAB_fascism_DEF:1 "Суверенное Габонское Государство"
  GAB_democratic:1 "Габонская Республика"
@@ -1921,17 +1915,17 @@
  GNB:0 "Гвинея-Бисау"
  GNB_DEF:0 "Гвинея-Бисау"
  GNB_ADJ:0 "Гвинея-Бисауск"
- SEN_fascism:1 "Диктаторское Государство Сенегал"
+ SEN_fascism:1 "Сенегал"
  SEN_fascism_DEF:1 "Диктаторское Государство Сенегал"
  SEN_democratic:0 "Сенегал"
  SEN_democratic_DEF:0 "Сенегал"
- SEN_neutrality:0 "Джолоф"
- SEN_neutrality_DEF:0 "Джолоф"
+ SEN_neutrality:0 "Мюридия"
+ SEN_neutrality_DEF:0 "Мюридия"
  SEN_communism:1 "Сенегальская Народно-Демократическая Республика"
  SEN_communism_DEF:1 "Сенегальская Народно-Демократическая Республика"
  SEN_fascism_ADJ:0 "Сенегальск"
  SEN_democratic_ADJ:0 "Сенегальск"
- SEN_neutrality_ADJ:1 "Джолофск"
+ SEN_neutrality_ADJ:1 "Мюридск"
  SEN_communism_ADJ:0 "Сенегальск"
  SEN:0 "Сенегал"
  SEN_DEF:0 "Сенегал"
@@ -1970,13 +1964,13 @@
  NGR_fascism_DEF:1 "Возвышенный Нигер"
  NGR_democratic:1 "Республика Нигер"
  NGR_democratic_DEF:1 "Республика Нигер"
- NGR_neutrality:0 "Нигер"
- NGR_neutrality_DEF:0 "Нигер"
+ NGR_neutrality:0 "Конфедерации Туарегов"
+ NGR_neutrality_DEF:0 "Конфедерации Туарегов"
  NGR_communism:1 "Нигерийская Народная Республика"
  NGR_communism_DEF:1 "Нигерийская Народная Республика"
  NGR_fascism_ADJ:0 "Нигерийск"
  NGR_democratic_ADJ:0 "Нигерийск"
- NGR_neutrality_ADJ:0 "Нигерийск"
+ NGR_neutrality_ADJ:0 "Туарегск"
  NGR_communism_ADJ:0 "Нигерийск"
  NGR:0 "Нигер"
  NGR_DEF:0 "Нигер"
