--- a/localisation/russian/replace/replace_frontend_l_russian.yml
+++ b/localisation/russian/replace/replace_frontend_l_russian.yml
@@ -1,2 +1,2 @@
 ﻿l_russian:
- FE_DIFFICULTY_HARD_TOOLTIP:0 "§L"I am young, I am twenty years old; yet I know nothing of life but despair, death, fear, and fatuous superficiality cast over an abyss of sorrow. I see how peoples are set against one another, and in silence, unknowingly, foolishly, obediently, innocently slay one another."§!"
+ FE_DIFFICULTY_HARD_TOOLTIP:0 "§L«Я молод, мне двадцать лет, но я не знаю о жизни ничего, кроме отчаяния, смерти, страха и легкомысленной наивности, брошенной в бездну печали. Я вижу, как народы натравливаются друг на друга и молча, неосознанно, глупо, покорно, безвинно убивают.»§!"
