--- a/localisation/russian/replace/replace_strategic_region_names_l_russian.yml
+++ b/localisation/russian/replace/replace_strategic_region_names_l_russian.yml
@@ -1,4 +1,6 @@
 ﻿l_russian:
+ STRATEGICREGION_7:0 "Юго-Западная Германия"
+ STRATEGICREGION_8:0 "Пруссия"
  STRATEGICREGION_10:0 "Швеция"
  STRATEGICREGION_11:0 "Норвегия"
  STRATEGICREGION_12:1 "Лапландия"
@@ -7,9 +9,10 @@
  STRATEGICREGION_15:0 "Юго-Западный Китай"
  STRATEGICREGION_22:0 "Цислейтания"
  STRATEGICREGION_25:0 "Южные Балканы"
- STRATEGICREGION_27:0 "Паннонский Бассейн"
+ STRATEGICREGION_27:0 "Транслейтания"
  STRATEGICREGION_28:0 "Месопотамия"
  STRATEGICREGION_35:1 "Патагония"
+ STRATEGICREGION_37:0 "Прибалтика"
  STRATEGICREGION_38:0 "Польша"
  STRATEGICREGION_39:0 "Галиция"
  STRATEGICREGION_40:1 "Центрально-Черноземная область"
