--- a/localisation/russian/state_names_l_russian.yml
+++ b/localisation/russian/state_names_l_russian.yml
@@ -81,7 +81,7 @@
  STATE_80: "Буковина"
  STATE_81: "Олтения"
  STATE_82: "Банат"
- STATE_83: "Кришана"
+ STATE_83: "Западный Парциум"
  STATE_84: "Трансильвания"
  STATE_85: "Западная Пруссия"
  STATE_86: "Позен"
@@ -295,7 +295,7 @@
  STATE_294: "Мускат"
  STATE_295: "Леопольдвиль"
  STATE_296: "Португальская Гвинея"
- STATE_297: "Экваториальная Гвинея"
+ STATE_297: "Испанская Гвинея"
  STATE_298: "Побережье Либерии"
  STATE_299: "Фолклендские острова"
  STATE_300: "Уругвай"
@@ -1018,7 +1018,7 @@
  STATE_1017: "Йозгат"
  STATE_1018: "Чаталджа"
  STATE_1019: "Измит"
- STATE_1020: "Мобеж-Живе"
+ STATE_1020: "Восточный Альфельд"
  STATE_1021: "Акко"
  STATE_1022: "Битлис"
  STATE_1023: "Дейр-эз-Зор"
@@ -1042,6 +1042,7 @@
  STATE_1041: "Талех"
  STATE_1042: "Маахир"
  STATE_1043: "Шариш"
+ STATE_1044: "Восточный Парциум"
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
