--- a/localisation/russian/parties_l_russian.yml
+++ b/localisation/russian/parties_l_russian.yml
@@ -1946,3 +1946,16 @@
  SMR_communism_party_long:0 "Социалистическая Партия Сан-Марино"
  
  AFA_neutrality_party:0 "Династия Мудайто"
+ 
+ COG_fascism_party:0 "Кимбангизм"
+ COG_democratic_party:0 "ПК"
+ COG_democratic_party_long:0 "Панафриканский Конгресс"
+
+ SEN_fascism_party:0 "Сенегальские Наемники"
+ SEN_fascism_party_long:0 "Наемная Сенегальская Армия"
+ SEN_neutrality_party:0 "Мюридия"
+ SEN_communism_party:0 "Лига Защиты"
+ SEN_communism_party_long:0 "Лига Защиты Черной Расы"
+
+ MLW_neutrality_party:0 "Движение Чилембве"
+
