--- a/localisation/russian/replace/replace_core_l_russian.yml
+++ b/localisation/russian/replace/replace_core_l_russian.yml
@@ -1,5 +1,5 @@
 ﻿l_russian:
- ###FE_IRONMAN_TOOLTIP:0 "In Ironman Mode, console cheats are disabled and the game is automatically saved regularly to a single file. In games played with this setting, there is no turning back.\n\n§RWARNING\nUse of Ironman Mode will make it impossible to revert to an older save if a game-breaking bug appears, and may permanently ruin entire playthroughs.§!"
+ FE_IRONMAN_TOOLTIP:0 "В режиме Ironman консольные читы отключены, а игра автоматически регулярно сохраняется в один файл. В играх, созданных с этой настройкой, обратного пути уже не будет.\n\n§RПРЕДУПРЕЖДЕНИЕ\nИспользование режима Ironman сделает невозможным возврат к более старому сохранению в случае появления ошибки, разрушающей игру, и может навсегда испортить весь игровой процесс.§!"
  LOADING_GUI: "Подписываем Лондонский договор"
  LOADING_HISTORY: "Освобождаем Балканы"
  LOADING_SAVEGAME: "Переписываем историю: $NAME$"
