--- a/localisation/russian/replace/replace_effects_l_russian.yml
+++ b/localisation/russian/replace/replace_effects_l_russian.yml
@@ -1,5 +1,5 @@
 ﻿l_russian:
- EFFECT_UNLOCK_DECISION:0 "Unlocks Decision: £decision_icon_small $NAME|H$$EFFECT$"
- EFFECT_UNLOCK_DECISION_CATEGORY:0 "Unlocks £decision_icon_small $NAME|H$ Decisions."
- EFFECT_ACTIVATE_DECISION:1 "Activate decision: £decision_icon_small $NAME|H$"
- EFFECT_REMOVE_DECISION:0 "Remove decision: £decision_icon_small $NAME|H$
+ EFFECT_UNLOCK_DECISION:0 "Разблокирует решение: £decision_icon_small $NAME|H$$EFFECT$"
+ EFFECT_UNLOCK_DECISION_CATEGORY:0 "Разблокирует £decision_icon_small $NAME|H$ Decisions."
+ EFFECT_ACTIVATE_DECISION:1 "Активирует решение: £decision_icon_small $NAME|H$"
+ EFFECT_REMOVE_DECISION:0 "Уберет решение: £decision_icon_small $NAME|H$
