--- a/localisation/russian/replace/replace_ideas_l_russian.yml
+++ b/localisation/russian/replace/replace_ideas_l_russian.yml
@@ -3,8 +3,8 @@
  fascist_influence_desc:0 "Протофашистское давление сделало протофашизм очень популярным, и страна восприимчива к объединению с другими протофашистами."
  communist_influence:0 "Социалистическое влияние"
  communist_influence_desc:0 "Социалистическое давление сделало социализм очень популярным, и страна восприимчива к объединению с другими социалистами."
- victor_emmanuel:0 "Vittorio Emanuele III"
- idea_group_tank_manufacturer:0 "Armour Designer"
- POR_estado_novo_desc:1 "We should follow the principles of Corporatism and Autarky. The surest path to greater national strengthening is to further emphasize this approach, building a new, more powerful state."
+ idea_group_tank_manufacturer:0 "Конструктор брони"
+ POR_estado_novo_desc:1 "Мы должны следовать принципам корпоративизма и автаркии. Самый верный путь к большему национальному усилению - это дальнейшее развитие этого подхода, построение нового, более сильного государства."
  jiangnan_shipyard_group:0 "Jiangnan Dock and Engineering Works"
+ idea_PAR_the_aftershock_of_the_tripple_alliance_instant_desc:0 ""
  
