--- a/localisation/russian/replace/replace_traits_l_russian.yml
+++ b/localisation/russian/replace/replace_traits_l_russian.yml
@@ -15,3 +15,4 @@
  heavy_tank_manufacturer:0 "Конструктор тяжелой бронетехники"
  dive_bomber:0 "Морской разведчик"
  dive_bomber_desc:0 "§LЭксперт по использованию морских патрульных самолетов.§!"
+ nazi_sympathizer:0 "Prussian Sympathizer"
