--- a/localisation/russian/ww1_qing_l_russian.yml
+++ b/localisation/russian/ww1_qing_l_russian.yml
@@ -125,6 +125,26 @@
  QIN_chinese_labour_corps2_desc:0 "The western countries are sorely in need of workers. If we offer to send some of our criminals to aid their efforts, it may lead to better cooperation between our nations."
  QIN_aviation:0 "Domestic Aviation"
  QIN_aviation_desc:0 "Despite our efforts, air combat is something we are woefully inexperienced in. The British are willing to send us some of their fighters."
+ QIN_persist_new_policies:0 "Persist the New Policies"
+ QIN_persist_new_policies_desc:0 "Over the past hundred years, China has suffered a century of humiliation. To escape this shame, it must resolutely radical reforms."
+ QIN_new_laws:0 "Enact New Laws"
+ QIN_new_laws_desc:0 "One of the most important aspects of the new Qing reforms is institutional reform. Outdated penal and economic laws must be overhauled to allow capitalism to sprout on Chinese soil."
+ QIN_reform_national_currency:0 "Reform the National Currency"
+ QIN_reform_national_currency_desc:0 "There are countless types of currency in circulation on Chinese market, many of which are even foreign or ancient. Only by clearing up this confusion will we be able to carry out sound economic reform and development under the leadership of the government. Therefore, we will mint and circulate a new silver coin, unique to the Qing Empire."
+ QIN_new_army_expansion:0 "New Army Expansion"
+ QIN_new_army_expansion_desc:0 "Over the past decade, we have reformed the military system to create the New Army and strengthen our military capabilities, and we must continue to pursue these reforms."
+ QIN_reform_taxes:0 "Reform Taxes"
+ QIN_reform_taxes_desc:0 "The one of foundation of a state system is taxation. The Qing Empire is vast and our people are numerous, but the taxes we collect to fund our reforms keep get lost somewhere along the way. We need to clean up this mess and reform our taxation system."
+ QIN_new_schooling:0 "New Schooling"
+ QIN_new_schooling_desc:0 "In our Chinese history, there have been some really outstanding sages, but listen, they are all ancient people, thousands or centuries old. What we need right now is not Confucianism doctorates, but Western reformers, and this can only be done through modern education reform."
+ QIN_delay_national_assembly:0 "Delay the National Assembly"
+ QIN_delay_national_assembly_desc:0 "Of course, obviously, the government has announced that we will have a constitutional monarchy in a few years, but the time hasn't come yet, and we're not ready for it, and those bastards, the constitutionalists, are already asking for a parliament, which is tantamount to treason. Let's just shut up the noisemakers and get on with our reforms."
+ QIN_money_to_reform:0 "Money to Reform"
+ QIN_money_to_reform_desc:0 "Okay, here's the problem. We need to push through reforms, but we need money to do reforms, and we don't have anywhere to get it! We need to do something about it...!"
+ QIN_army_leadership_problem:0 "Problem with Army Leadership"
+ QIN_army_leadership_problem_desc:0 "For the past hundred years, we've allowed local powerhouses to raise privateers in place of the outdated central army to counter foreign invasions and internal rebellions. And that means their influence still extends to our New Army, which influences are a potential threat to the dynasty, especially since they're Han Chinese, unlike the Manchu imperial family."
+ QIN_nationalise_railways:0 "Nationalise Railways"
+ QIN_nationalise_railways_desc:0 "The railway business has been dominated by foreigners, but a few years ago, there was also a joint venture between domestic investors and the government to build a railway that we own, which meant that we could get loans from foreign banks using the railway as collateral."
 ###regular
  QIN_army_westernization:0 "Army Westernization"
  QIN_army_westernization_desc:0 "This will be 'New' New Army of China."
@@ -191,6 +211,12 @@
  QIN_idea_nineteen_articles:0 "Nineteen Articles"
  QIN_idea_nineteen_articles_desc:0 "The Nineteen Major Articles of Good Faith on the Constitution is the first constitution of the Qing dynasty, limiting the rights of the emperor to the law, prescribing the monarch as a symbolic head of state who reigns but does not govern, and the political power of the parliament and the prime minister."
  QIN_idea_nineteen_articles_tt:0 "§RThe Qing dynasty would have to face irreversible consequences if it did not carry out radical constitutional reforms as soon as possible...§!"
+ QIN_idea_new_policies:0 "New Policies"
+ QIN_idea_new_policies_desc:0 "The Qing dynasty is pushing for the new policies to revive the empire and end the century of humiliation."
+ QIN_idea_no_money_for_reform:0 "No Money for Reform"
+ QIN_idea_no_money_for_reform_desc:0 "Are we gonna sit down here doing nothing!?"
+ QIN_idea_constitutional_movement:0 "Constitutional Movement"
+ QIN_idea_constitutional_movement_desc:0 "The government has promised to implement a constitutional monarchy in a few years, but the constitutionalists are clamouring for a parliament now. So traitorous aren't they?"
 #opinions
  QIN_unfriendly_recall:0 "Unfriendly Recall"
  QIN_claimed_kachin:0 "Claimed Kachin"
