wipe this meme from the face of the earth

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -847,7 +847,7 @@
  ENG_fund_loyalist_paramilitaries:0 "Fund Loyalist Paramilitaries"
  ENG_fund_loyalist_paramilitaries_desc:0 "The Liberals tried to push for home rule for Ireland. This is unacceptable! Instead, we will do the opposite- the Ulster Volunteer Force will be very happy to receive our covert backing..."
  ENG_preemptive_strikes:0 "Pre-Emptive Strikes"
- ENG_preemptive_strikes_desc:0 "The German High Seas Fleet grows, and we must be prepared. By pre-emptively "securing" Norway, Iceland and Greenland, we can have the bases necessary to keep the Atlantic British."
+ ENG_preemptive_strikes_desc:0 "The German threat grows, the war is inevitable, so we must have it on out own terms."
  ENG_increase_indian_trade:0 "Increase Indian Trade"
  ENG_increase_indian_trade_desc:0 "India is a great resource of wealth for the Empire. We would do well to strengthen our ties there."
  ENG_churchill_factor:0 "The Churchill Factor"
