--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4952,10 +4952,20 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman_syria.31.a:0 "After our long struggle, we've finally secured Aleppo."
  ottoman_syria.32.t:0 "Appointment of Mustafa Abdülhalik Bey"
  ottoman_syria.32.d:0 "After several backs and forths with the Centrak Committee, the Committee members have finally accepted our request to replace Hasan Mazhar Bey with someone who we'll accept. Though not appointing the guy we've previously asked for, they've offered Mustafa Abdülhalik Bey as a compromise. While he's a name close to Talat Paşa, he's someone we can work with. Of course we can force our candidate against the will of the Committee, at a cost though."
- ottoman_syria.32.a:0 "Accpet Abdülhalik's governorship."
+ ottoman_syria.32.a:0 "Accept Abdülhalik's governorship."
  ottoman_syria.32.b:0 "Force our candidate, at whatever cost."
  ottoman_syria.32.tt:0 "Modify §YCemâl's Syria§! by\n£political_power_texticon  Political Power Gain: §R-3%§!\n\n"
+ ottoman_syria.33.t:0 "Cemâl Invites Halide Edib Hanım to Syria"
+ ottoman_syria.33.d:0 "As Ahmed Cemâl Paşa pursues ways to educate, and potentially assimilate, youth in Syria, he's been looking for experienced people to aid him in his task. Being close to Cemâl'S circle in the Central Committee, Cemâl has sent an official invitation for Halide Edib Hanım to join him in Syria to open up new boarding schools for female students. As Halide Edib has valuable knowledge on the matter of education, she could be useful in Syria. Yet if we have different plans for her, she might better stay in [TUR.capital.GetName] with us."
+ ottoman_syria.33.a:0 "We don't need her here anyways."
+ ottoman_syria.33.b:0 "We can't let Cemâl get stronger."
+ ottoman_syria.34.t:0 "Halide Edib Hanım Joins us in Syria"
+ ottoman_syria.34.d:0 "As we're trying to pursue new ways to improve the education of Syria, we've sent an invite to Halide Edib Hanım to help us with women's education. To our luck, she has agreed to depart for Syria and help with our initiatives. As the Central Committee has also agreed, she will be arriving in Syria soon to open up boarding schools for young girls."
+ ottoman_syria.34.a:0 "She will accomplish much in young girls' education."
  ottoman_syria.34.tt:0 "Modify §YCrippling Illiteracy§! by\n£population_texticon  Monthly Population: §G+7.0%§!\n£research_speed_texticon  Research Speed: §G+3.00%§!\n\n"
+ ottoman_syria.35.t:0 "Central Committee Blocks Halide Edib Hanım's Departure"
+ ottoman_syria.35.d:0 "As we're trying to pursue new ways to improve the education of Syria, we've sent an invite to Halide Edib Hanım to help us with women's education. Though herself agreed, the Central Committee has prevented her from departing from [TUR.capital.GetName]. Unfortunately, we won't be able to benefit from her experties."
+ ottoman_syria.35.a:0 "Unfortunately, we'll have to work with what we have in our hands."
 
  ottoman..120.t:0 "Sects Mobilize"
  ottoman..120.d:0 "With the start of the war, conservative sects supporting our regime has started to send volunteer forces in an effort to aid us in our war effort."
