--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -883,14 +883,12 @@
  TUR_crippling_illiteracy_desc:0 "Our empire is mostly rural and a large part of the society has no access to education. Even those who has, due to religious indoctrination western science is viewed as heresy. Because of our insanely high illiteracy rates, we have difficulties with research and produce modern technology."
  TUR_crippling_illiteracy_dm:0 "£pol_idea  Crippling Illiteracy"
  TUR_crippling_illiteracy_dm_desc:0 "Our empire is mostly rural and a large part of the society has no access to education. Even those who has, due to religious indoctrination western science is viewed as heresy. Because of our insanely high illiteracy rates, we have difficulties with research and produce modern technology."
- TRS_crippling_illiteracy_tt:0 "[TRS_crippling_illiteracy_political_power_cost][TRS_crippling_illiteracy_monthly_population][TRS_crippling_illiteracy_conscription_factor][TRS_crippling_illiteracy_research_speed_factor][TRS_crippling_illiteracy_industrial_capacity_factory][TRS_crippling_illiteracy_FRA_defense_bonus_against][TRS_crippling_illiteracy_AUH_defense_bonus_against]"
+ TRS_crippling_illiteracy_tt:0 "[TRS_crippling_illiteracy_political_power_cost][TRS_crippling_illiteracy_monthly_population][TRS_crippling_illiteracy_conscription_factor][TRS_crippling_illiteracy_research_speed_factor][TRS_crippling_illiteracy_industrial_capacity_factory]"
  TRS_crippling_illiteracy_political_power_cost_yes:0 "£political_power_cost_texticon  Daily Political Power Cost: [?TUR_ci_political_power_cost|-=%%]\n"
  TRS_crippling_illiteracy_monthly_population_yes:0 "£population_texticon  Monthly Population: [?TUR_ci_monthly_population|1+=%]\n"
  TRS_crippling_illiteracy_conscription_factor_yes:0 "£manpower_texticon  Recruitable Population Factor: [?TUR_ci_conscription_factor|0+%]\n"
  TRS_crippling_illiteracy_research_speed_factor_yes:0 "£research_speed_texticon  Research Speed: [?TUR_ci_research_speed_factor|=+%]\n"
  TRS_crippling_illiteracy_industrial_capacity_factory_yes:0 "£factory_output_texticon  Factory Output: [?TUR_ci_industrial_capacity_factory|=+%]\n"
- TRS_crippling_illiteracy_FRA_defense_bonus_against_yes:0 "(§Y[FRA.GetNameWithFlag]§!) £defence_texticon  Defense bonus against country: §R-10.0%§!\n"
- TRS_crippling_illiteracy_AUH_defense_bonus_against_yes:0 "(§Y[AUH.GetNameWithFlag]§!) £defence_texticon  Defense bonus against country: §R-10.0%§!\n"
  TUR_guaranteed_freedom_of_speech:0 "Guaranteed Freedom of Speech"
  TUR_guaranteed_human_right:0 "Guaranteed Human Rights"
  TUR_limited_speech:0 "Restricted Personal Rigths and Freedoms"
